		- added css to remove antialiasing on all images which makes them very crisp (background day/night cycle included)
		- added UI shortening / hiding / expanding button
		- fixed some bugs
		- added scene switching which also accordingly changes the positions of the UI
		- added cookie API to make my life a whole lot easier
}
{ TODO / BUGS >

		NOTE: please send any bugs, errors, glitches or suggestions (please look at the planned features (at the bottom) first to not make a duplicate)
		through the github issue tracker to help improving the game! You'll also be mentioned in the credits :) (https://github.com/Sv443/TextAdventureGame/issues)


		D- (DONE - added load delay to allow for functions to load before getting called) fix bug of modules not loading correctly on a public website (works fine locally via file:///)
		D- (DONE - if statement was formatted weirdly) fix bug of "make" always executing the not enough material to build shelter message
		D- (DONE - put it to the left of changelog arrow) find better position for mute button
		D- (DONE - had to be "else if" but only was "if") fix bug of "what do you want to get?" appearing after coconut was taken
		D- (DONE - also added load delay) fix bug of "the save module was disabled" being shown no matter if it was loaded correctly or not
		D- (DONE - made the script not focus if CTRL and/or ALT are being pressed) make the script not focus on the <input> when CTRL is pressed
		- module count display and init still not loading correctly (slowly starts to piss me off now) (this bug is not game breaking but it makes the displays not work and sometimes even the prologue messages don't show up at all and it displays the couldn't load script error even though everything works fine)
		D- (DONE - made the background color transparent) graphical error of retry button not having a transparent container