@@ -12,10 +12,10 @@ code incompatible with Internet Explorer 1-11
 
 
 // Settings
-var curversion = "[B]-0.0.5 (experimental)";
+var curversion = "[B]-0.0.5";
 var death_enabled = true; //enable / disable death - default true
-var max_volume = 0.2; //maximum volume level of played audios - default 0.2 - min 0 - max 1
-var dbg = true; //debug to the html output - default false
+var max_volume = 0.2; //maximum volume level of played audios - default and recommended 0.2 - min 0 - max 1
+var dbg = false; //debug to the html output - default false
 var module_load_time = 500; //time buffer for the modules to load / reload. increase if they don't load correctly or decrease if they load too slowly
 var daynightcycle_delay = 3000; /*time in ms between the day/night cycle states (12 states/day) (entered time in seconds * 12 / 60 = duration of a full day/night cycle) (or uncomment the following and look in the console to see the duration)*/       //console.log("daynightcycle - full cycle duration: " + daynightcycle_delay/1000*12/60 + " minutes or " + daynightcycle_delay/1000*12 + " seconds");
 var unlock_all_timed = false; //unlocks all positive timed events (eg. finding the wreck) - default false
@@ -70,7 +70,7 @@ module_tag_scenes = document.createElement('script');module_tag_scenes.src="TAG_
 /* 0.0.2 */ 						+ "<br><br><br><span style='font-size:0.75vw;'><b>[B]-0.0.2</b></span><br><div style='width:100%;border-top-style:solid;border-width:2px;'></div><br>- completely reworked UI<br><br>- added status effects, inventory and crafting system<br><br>- added timed events<br><br>- added sidebar with infos<br><br>- added saving and loading mechanism (although loading is disabled)<br>"
 /* 0.0.3 */ 						+ "<br><br><br><span style='font-size:0.75vw;'><b>[B]-0.0.3</b></span><br><div style='width:100%;border-top-style:solid;border-width:2px;'></div><br>- added structure system, added basic shelter and explorable shipwreck<br><br>- renamed to Text Island<br><br>- tons and tons of fixes to improve convenience<br><br>- added flint stone and hatchet<br><br>- changed retry button<br><br>- modified sidebar<br><br>- fixed incompatibility errors<br><br>- added score system<br><br>- added many synonyms<br><br>- added day/night cycle with ingame time and time display (currently very fast and with no function)<br><br>- improved scaling of all elements<br>"
 /* 0.0.4 */ 						+ "<br><br><br><span style='font-size:0.75vw;'><b>[B]-0.0.4</b></span><br><div style='width:100%;border-top-style:solid;border-width:2px;'></div><br>- added audio system, added some basic placeholder-sounds<br><br>- added ambient sound that plays on load<br><br>- added mute/unmute button<br><br>- redesigned retry button<br><br>- added tree chopping with logs item drop<br><br>- improved day/night cycle and made it independent from game timer<br><br>- added this collapsable ingame changelog display<br><br>- added day/night dependant ambient sounds<br><br>- fixed bug of 'make' always executing the not enough material to build shelter message<br><br>- fixed bug of 'what do you want to get?' message executed after coconut was taken<br><br>- changed position of mute button to the left of the changelog arrow<br><br>- fixed position changes of top right control panel when changelog is opened<br><br>- reformatted changelog a bit<br><br>- removed image display of day/night cycle and made it so the background displays it instead<br><br>- added background underlay behind in/output elements, info panel and control panel<br><br>- changed last save string in the info panel to last saved at (ingame time)<br>"
-/* 0.0.5 */                         + "<br><br><br><span style='font-size:0.75vw;'><b>[B]-0.0.5</b></span><br><div style='width:100%;border-top-style:solid;border-width:2px;'></div><br>- made it so the modules will be loaded twice for more stability in the UI<br><br>- telling the user if they are using a mobile device because they are currently unsupported<br><br>- hovering over the loaded modules indicator will show all loaded modules<br><br>- added css to remove antialiasing on all images which makes them very crisp (background day/night cycle included)<br><br>- added ui shortening / hiding / expanding button<br><br>- added scene switching which also accordingly changes the positions of the UI<br><br>- fixed some bugs<br><br>- added cookie API to make my life a whole lot easier<br>";
+/* 0.0.5 */                         + "<br><br><br><span style='font-size:0.75vw;'><b>[B]-0.0.5</b></span><br><div style='width:100%;border-top-style:solid;border-width:2px;'></div><br>- made it so the modules will be loaded twice for more stability in the UI<br><br>- telling the user if they are using a mobile device because they are currently unsupported<br><br>- hovering over the loaded modules indicator will show all loaded modules<br><br>- added css to remove antialiasing on all images which makes them very crisp (background day/night cycle included)<br><br>- added ui shortening / hiding / expanding button<br><br>- added scene switching which also accordingly changes the positions of the UI<br><br>- fixed some bugs<br><br>- added cookie API to make my life a whole lot easier<br><br>- added score and item saving and loading<br>";
 
 
 
